<resources>
    <string name="app_name">BlancoLopezSaulProyectoPMDM</string>
    <string name="terminos">Acepto los <a href="https://www.edu.xunta.gal/centros/iesmurallaromana/">Términos y Condiciones</a></string>
    <string name="title_activity_peliculas">PeliculasActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Textos fijos -->
    <string name="NombreApp">RanchoFilms</string>
    <string name="GeneroT">Género:</string>
    <string name="DirectorT">Director:</string>
    <string name="PlataformaT">Plataforma:</string>
    <string name="TiempoT">Duración:</string>
    <string name="TelefonoT">Teléfono:</string>

    <!-- Textos visibles al usuario -->
    <string name="Usuario">Usuario</string>
    <string name="Apellidos">Apellidos</string>
    <string name="Email">E-mail</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Rep_Contraseña">Repetir Contraseña</string>

    <!-- Hints -->
    <string name="Titulo">Titulo de la pelicula</string>
    <string name="Descripcion">Descripción de la pelicula</string>
    <string name="Director">Director</string>
    <string name="Genero">Genero</string>
    <string name="Plataforma">Plataforma</string>
    <string name="Tiempo">0h 00min</string>
    <string name="Telefono">Teléfono</string>
    <string name="Nota">0.0</string>

    <!-- Botones -->
    <string name="Sel_Imagen">Seleccionar Imagen</string>
    <string name="Añ_Pelicula">Seleccionar Imagen</string>
    <string name="CrearCuenta">Crear Cuenta</string>
    <string name="Editar">Editar Pelicula</string>
    <string name="Acceder">Acceder</string>

</resources>