<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".activities.AnadirPeliculaActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <EditText
            android:id="@+id/etAnadirTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:backgroundTint="@color/black"
            android:cursorVisible="true"
            android:hint="@string/Telefono"
            android:inputType="phone"
            android:maxLength="9"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textCursorDrawable="@color/colorRojoNetflix"
            android:textSize="@dimen/tamañoTexto"
            app:layout_constraintBottom_toBottomOf="@+id/tvTelefono"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvTelefono" />

        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacioText"
            android:text="@string/TelefonoT"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tiempo3" />

        <TextView
            android:id="@+id/director3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacioText"
            android:text="@string/DirectorT"
            android:textColor="@color/black"
            android:textSize="@dimen/tamañoTexto"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genero3" />

        <EditText
            android:id="@+id/etAnadirDirector"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:backgroundTint="@color/black"
            android:cursorVisible="true"
            android:hint="@string/Director"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textCursorDrawable="@color/colorRojoNetflix"
            android:textSize="@dimen/tamañoTexto"
            app:layout_constraintBottom_toBottomOf="@+id/director3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/director3" />

        <ImageView
            android:id="@+id/ivCaratulaAñadir"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/espacioFotoTexto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etAnadirTitulo"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />

        <EditText
            android:id="@+id/etAnadirTiempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:backgroundTint="@color/black"
            android:cursorVisible="true"
            android:hint="0h"
            android:inputType="number"
            android:maxLength="8"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textCursorDrawable="@color/colorRojoNetflix"
            android:textSize="@dimen/tamañoTexto"
            app:layout_constraintBottom_toBottomOf="@+id/tiempo3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tiempo3" />

        <TextView
            android:id="@+id/genero3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacioText"
            android:text="@string/GeneroT"
            android:textColor="@color/black"
            android:textSize="@dimen/tamañoTexto"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivEstrella" />

        <TextView
            android:id="@+id/plataforma3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacioText"
            android:text="@string/PlataformaT"
            android:textColor="@color/black"
            android:textSize="@dimen/tamañoTexto"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/director3" />

        <TextView
            android:id="@+id/tiempo3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacioText"
            android:text="@string/TiempoT"
            android:textColor="@color/black"
            android:textSize="@dimen/tamañoTexto"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plataforma3" />

        <EditText
            android:id="@+id/etAnadirTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:cursorVisible="true"
            android:hint="@string/Titulo"
            android:inputType="textPersonName"
            android:shadowColor="@color/colorRojoNetflix"
            android:textColor="@color/colorRojoNetflix"
            android:textColorHighlight="@color/colorRojoNetflix"
            android:textColorLink="@color/colorRojoNetflix"
            android:textCursorDrawable="@color/colorRojoNetflix"
            android:textSize="@dimen/tamañoTitulos"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/etAnadirDescripcion"
            android:layout_width="0dp"
            android:layout_height="400dp"
            android:layout_marginTop="28dp"
            android:backgroundTint="@color/black"
            android:cursorVisible="true"
            android:elegantTextHeight="true"
            android:gravity="start|top"
            android:hint="@string/Descripcion"
            android:inputType="textMultiLine"
            android:shadowColor="@color/colorRojoNetflix"
            android:textColor="@color/black"
            android:textCursorDrawable="@color/colorRojoNetflix"
            android:textSize="@dimen/tamañoDescripcion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etUrlImagen" />

        <EditText
            android:id="@+id/etAnadirPlataforma"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:backgroundTint="@color/black"
            android:cursorVisible="true"
            android:hint="@string/Plataforma"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textCursorDrawable="@color/colorRojoNetflix"
            android:textSize="@dimen/tamañoTexto"
            app:layout_constraintBottom_toBottomOf="@+id/plataforma3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/plataforma3" />

        <EditText
            android:id="@+id/etAnadirGenero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:backgroundTint="@color/black"
            android:cursorVisible="true"
            android:hint="@string/Genero"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textCursorDrawable="@color/colorRojoNetflix"
            android:textSize="@dimen/tamañoTexto"
            app:layout_constraintBottom_toBottomOf="@+id/genero3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/genero3" />

        <EditText
            android:id="@+id/etAnadirNota"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:backgroundTint="@color/black"
            android:cursorVisible="true"
            android:hint="@string/Nota"
            android:inputType="phone"
            android:maxLength="3"
            android:textColor="@color/black"
            android:textCursorDrawable="@color/colorRojoNetflix"
            android:textSize="@dimen/tamañoNota"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/ivEstrella"
            app:layout_constraintStart_toEndOf="@+id/ivEstrella"
            app:layout_constraintTop_toTopOf="@+id/ivEstrella"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/ivEstrella"
            android:layout_width="92dp"
            android:layout_height="85dp"
            android:layout_marginTop="@dimen/espacioText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etAnadirDescripcion"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <Button
            android:id="@+id/btAnadirPelicula"
            android:layout_width="@dimen/tamañoBotonG"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacioTextoBoton"
            android:backgroundTint="@color/colorRojoNetflix"
            android:text="@string/Añ_Pelicula"
            android:textSize="@dimen/tamañoBoton"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etAnadirTelefono" />

        <EditText
            android:id="@+id/etUrlImagen"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="Url imagen"
            android:inputType="textUri"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivCaratulaAñadir" />

        <Button
            android:id="@+id/btPrevisualizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="Cargar Imagen"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/etUrlImagen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/etUrlImagen"
            app:layout_constraintTop_toTopOf="@+id/etUrlImagen" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>