<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.CrearcuentaActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp">

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/tilNombreUsuario"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacioTituloTexto"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="@color/colorRojoNetflix"
            app:hintTextColor="@color/colorRojoNetflix"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvApp"
            app:startIconDrawable="@drawable/outline_account_circle_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietNombreUsuario"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Usuario"
                android:maxLines="1"
                android:textCursorDrawable="@color/colorRojoNetflix" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilApellidos"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacioText"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="@color/colorRojoNetflix"
            app:hintTextColor="@color/colorRojoNetflix"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilNombreUsuario"
            app:startIconDrawable="@drawable/outline_account_circle_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietApellidos"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Apellidos"
                android:maxLines="1"
                android:textCursorDrawable="@color/colorRojoNetflix" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacioText"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="@color/colorRojoNetflix"
            app:hintTextColor="@color/colorRojoNetflix"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilApellidos"
            app:startIconDrawable="@drawable/outline_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textCursorDrawable="@color/colorRojoNetflix" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilContraseña"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacioText"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="@color/colorRojoNetflix"
            app:hintTextColor="@color/colorRojoNetflix"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilEmail"
            app:startIconDrawable="@drawable/outline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietContraseña"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Contraseña"
                android:maxLines="1"
                android:textCursorDrawable="@color/colorRojoNetflix" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRepetirContraseña"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacioText"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="@color/colorRojoNetflix"
            app:hintTextColor="@color/colorRojoNetflix"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilContraseña"
            app:startIconDrawable="@drawable/outline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietRepetirContraseña"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Rep_Contraseña"
                android:maxLines="1"
                android:textCursorDrawable="@color/colorRojoNetflix" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btAceptar"
            android:layout_width="@dimen/tamañoBotonG"
            android:layout_height="48dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="@dimen/espacioTextoBoton"
            android:layout_marginEnd="50dp"
            android:backgroundTint="@color/colorRojoNetflix"
            android:text="@string/CrearCuenta"
            android:textSize="@dimen/tamañoBoton"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilRepetirContraseña" />

        <TextView
            android:id="@+id/tvApp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/akronim"
            android:text="@string/NombreApp"
            android:textAlignment="center"
            android:textColor="@color/colorRojoNetflix"
            android:textSize="@dimen/tamañoNombreApp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>